force-app/main/default/objects/Bitacora_Sync__c/Bitacora_Sync__c.object-meta.xml
<CustomObject>
    <label>Bitacora Sync</label>
    <nameField>
        <displayFormat>Sync - {00000000}</displayFormat>
        <label>Correlativo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bitacoras Sync</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>