force-app/main/default/objects/Bitacora_Sync__c/fields/Beneficiarios__c.field-meta.xml
<CustomField>
    <fullName>Beneficiarios__c</fullName>
    <label>Beneficiarios</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>