force-app/main/default/objects/Bitacora_Sync__c/fields/Beneficiarios_Correctos__c.field-meta.xml
<CustomField>
    <fullName>Beneficiarios_Correctos__c</fullName>
    <label>Beneficiarios Correctos</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>