force-app/main/default/objects/Bitacora_Sync__c/fields/Clientes__c.field-meta.xml
<CustomField>
    <fullName>Clientes__c</fullName>
    <label>Clientes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>