force-app/main/default/objects/Bitacora_Sync__c/fields/Cuentas_Correctas__c.field-meta.xml
<CustomField>
    <fullName>Cuentas_Correctas__c</fullName>
    <label>Cuentas Correctas</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>