force-app/main/default/objects/Bitacora_Sync__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <label>Fecha y Hora</label>
    <type>DateTime</type>
</CustomField>