force-app/main/default/objects/Bitacora_Sync__c/fields/RespuestaClienteJuridico__c.field-meta.xml
<CustomField>
    <fullName>RespuestaClienteJuridico__c</fullName>
    <label>Respuesta Cliente Jurídico</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>