force-app/main/default/objects/Bitacora_Sync__c/fields/RespuestaClienteNatural__c.field-meta.xml
<CustomField>
    <fullName>RespuestaClienteNatural__c</fullName>
    <label>Respuesta Cliente Natural</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>