force-app/main/default/objects/Bitacora_Sync__c/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <label>Resultado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>